# swagger/swagger.json
@@ -187,6 +187,32 @@
                 }
             }
         },
+        "/image/getall": {
+            "get": {
+                "tags": [
+                    "image"
+                ],
+                "description": "get all container",
+                "operationId": "ImageController.get all container",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "vm_ip",
+                        "description": "宿主机地址",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\": 200}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/reg/": {
             "get": {
                 "tags": [
@@ -399,6 +425,10 @@
         {
             "name": "container",
             "description": "Operations about Container\n"
+        },
+        {
+            "name": "image",
+            "description": "Operations about Image\n"
         },
         {
             "name": "res",
